--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <head>
 
 		<!-- Title -->
-		<title>Asso - One Page HTML5 Website Template</title>
+		<title>Astutrix - Data Science And Digital Tech</title>
 
 		<!-- Meta -->
 		<meta charset="utf-8">
@@ -109,17 +109,16 @@
 							<div class="col col-md-4">
 								<h4 class="top-slidingbar-heading text-gray-2">Information</h4>
 								<hr class="hr-width-1 hr-double margin-top-15">
-								<p class="small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt uteralis labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+								<p class="small">We are a boutique consulting firm powered by Data Sciences and Digital Technology professionals with experience of having worked on some of the most challenging assignments across the globe.</p>
 							</div> <!-- /.col -->
 
 							<div class="col col-md-4">
 								<h4 class="top-slidingbar-heading text-gray-2">Contact</h4>
 								<hr class="hr-width-1 hr-double margin-top-15">
 								<ul class="list-unstyled small">
-									<li><i class="fa fa-home"></i> 121 King Street, Melbourne, Australia</li>
-									<li><i class="fa fa-phone"></i> (+548) 12-345-6789</li>
-									<li><i class="fa fa-envelope-o"></i> <a href="mailto:support@mail.com">support@mail.com</a></li>
+									<li><i class="fa fa-home"></i> F-103, Kanchenjunga Towers, Sector 56, Gurgaon -122001</li>
+									<li><i class="fa fa-phone"></i> (+91) TODO: Number</li>
+									<li><i class="fa fa-envelope-o"></i> <a href="mailto:marketing@astutrix.com">marketing@astutrix.com</a></li>
 								</ul>
 							</div> <!-- /.col -->
 
@@ -183,7 +182,7 @@
 
 						<!-- Begin logo  -->
 						<div class="logo font-alter-1">
-							<a href="index.html"><h1>As/so</h1></a>
+							<a href="index.html"><h1>Astutrix</h1></a>
 						</div>
 						<!-- End logo -->
 
@@ -341,13 +340,13 @@
 					<!-- Begin intro caption -->
 					<div class="intro-caption vertical-align-center text-center text-white">
 						<h2 class="intro-title font-alter-1">
-							<span class="wow fadeInDown" data-wow-delay="0.4s" data-wow-duration="0.5s">A</span>
-							<span class="wow fadeInDown" data-wow-delay="0.6s" data-wow-duration="0.5s">s</span>
-							<span class="wow bounceIn" data-wow-delay="1.6s">/</span>
-							<span class="wow fadeInDown" data-wow-delay="0.8s" data-wow-duration="0.5s">s</span>
-							<span class="wow fadeInDown" data-wow-delay="1s" data-wow-duration="0.5s">o</span>
+							<span class="wow fadeInDown" data-wow-delay="0.4s" data-wow-duration="0.5s">As</span>
+							<span class="wow fadeInDown" data-wow-delay="0.6s" data-wow-duration="0.5s">tu</span>
+							<!-- <span class="wow bounceIn" data-wow-delay="1.6s">/</span> -->
+							<span class="wow fadeInDown" data-wow-delay="0.8s" data-wow-duration="0.5s">tr</span>
+							<span class="wow fadeInDown" data-wow-delay="1s" data-wow-duration="0.5s">ix</span>
 						</h2>
-						<p class="intro-description wow fadeIn" data-wow-delay="2.2s">Creative Agency Since 2006</p>
+						<p class="intro-description wow fadeIn" data-wow-delay="2.2s">Data Science and Services</p>
 						<div class="margin-top-30">
 							<a href="#section-2" class="btn btn-white-bordered sm-scroll wow bounceIn" data-wow-delay="0.8s">Our Services</a> 
 							<a href="#section-8" class="btn btn-primary sm-scroll margin-top-10 wow bounceIn" data-wow-delay="1s">Hire Us Now!</a>
@@ -357,7 +356,7 @@
 
 					<!-- Made with love :) -->
 					<div class="made-with-love hidden-xs">
-						<p class="text-gray">Made with <span class="text-main"><i class="fa fa-heart-o"></i></span></p>
+						<p class="text-gray">Made with <span class="text-main"><i class="fa fa-heart-o"></i></span>by<em>IOSD</em></p>
 					</div>
 
 					<!-- Scroll down arrow -->
@@ -391,21 +390,22 @@
 						<!-- Left column -->
 						<div class="col-md-8 padding-right-40">
 
-							<h2 class="call-to-action-title text-uppercase text-gray-2">Pellentesque Dignissim Risus Ante</h2>
+							<h2 class="call-to-action-title text-uppercase text-gray-2">Leading Consulting Firm</h2>
 							<p class="lead call-to-action-text text-gray">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-								sed do eiusmod tempor incididunt ut labore.
+								A consulting firm powered by Data Sciences and Digital Technology professionals with experience 
+								of having worked on some of the most 
+								challenging assignments across the globe.
 							</p>
-							<p class="call-to-action-text lead text-gray margin-top-30"><strong>Cool / Innovative / Creative</strong></p>
+							<p class="call-to-action-text lead text-gray margin-top-30"><strong>Data / Analytics / Design</strong></p>
 							
 						</div> <!-- /.col -->
 
 						<!-- Right column -->
 						<div class="col-md-4 text-center">
 
-							<a href="https://wrapbootstrap.com/user/Themetorium" target="_blank" class="btn btn-primary-bordered btn-rounded-5x btn-xlg btn-block"><i class="fa fa-shopping-cart"></i> Buy This Template</a>
+							<a href="#" class="btn btn-primary-bordered btn-rounded-5x btn-xlg btn-block"><i class="fa fa-mobile"></i> Contact Us</a>
 							<br>
-							<a href="#" class="small text-gray">Or Learn More.. <i class="fa fa-graduation-cap"></i></a>
+							<a href="#" class="small text-gray">Know More.. <i class="fa fa-caret-square-o-down"></i></a>
 							
 						</div> <!-- /.col -->
 
@@ -443,9 +443,12 @@
 								<hr class="hr-width-1 hr-5x border-main">
 								<!-- End divider -->
 
-								<p class="heading-tescription lead max-width-1000 margin-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-									quis nostrud exercitation ullamco laboris nisi ut aliquip consequat incididunt. <a href="#">Read More...</a>
+								<p class="heading-tescription lead max-width-1000 margin-auto">Missionaries for helping our clients gain a sustainable 
+								competitive advantage; Astutrix delivers Data Sciences and Digital 
+								Transformation & Technology services from ideation to execution, 
+								enabling our clients outperform their competition. A Digital Native, 
+								Astutrix takes an agile, collaborative approach to creating customized 
+								solutions across the digital value chain.
 								</p>
 							</div>
 							<!-- End heading -->
@@ -562,7 +565,9 @@
 								<hr class="hr-width-1 hr-5x border-main">
 								<!-- End divider -->
 
-								<p class="heading-tescription lead text-gray-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquapta. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi aliquipter consequat adipisicing sedari.
+								<p class="heading-tescription lead text-gray-2">We offer a range of Onsite and Online consultancy services which help clients improve their Data practices.  We do this by pairing technical with business expertise and focusing on fundamentals.
+								<br>With our unique experience of both buying and selling services and solutions, we can help your firm to make sure that your solution meets the needs of the industry.  We can provide bespoke research activities, tailored workshops and also improve your customer service by facilitating user groups and forums.
+
 								</p>
 								<br>
 								<a href="#" target="_blank" class="btn btn-white-bordered btn-rounded-5x"><i class="fa fa-external-link"></i> Read More!</a>
@@ -578,11 +583,11 @@
 								<div class="col-md-12">
 									<!-- Begin info box-4 -->
 									<div class="info-box info-box-4 info-box-white wow fadeIn">
-										<span class="info-box-icon square-icon bg-main text-white"><i class="fa fa-paint-brush"></i></span>
+										<span class="info-box-icon square-icon bg-main text-white"><i class="fa fa-database"></i></span>
 										<div class="info-box-info">
-											<h4 class="info-box-title">Designing</h4>
+											<h4 class="info-box-title">Data Sciences</h4>
 											<p class="info-box-text text-gray-2">
-												Lorem ipsum dolor sit amet, consectetur adipisicing elit minim veniam ut enim.
+												We are a boutique data analytics consulting firm powered by analytics professionals with experience of having worked on some of the most challenging analytics assignments across the globe.
 											</p>
 										</div>
 									</div>
@@ -594,9 +599,9 @@
 									<div class="info-box info-box-4 info-box-white wow fadeIn" data-wow-delay="0.2s">
 										<span class="info-box-icon square-icon bg-main text-white"><i class="fa fa-code"></i></span>
 										<div class="info-box-info">
-											<h4 class="info-box-title">Developing</h4>
+											<h4 class="info-box-title">Digital Consulting & Technology</h4>
 											<p class="info-box-text text-gray-2">
-												Lorem ipsum dolor sit amet, consectetur adipisicing elit minim veniam ut enim.
+												We are a Technology Services company deeply focussed on providing digital solutions to our clients. We work on Cloud platforms, Open Source technologies, Mobile Apps, Artificial Intelligence and Analytics solutions.
 											</p>
 										</div>
 									</div>
@@ -608,9 +613,9 @@
 									<div class="info-box info-box-4 info-box-white wow fadeIn" data-wow-delay="0.4s">
 										<span class="info-box-icon square-icon bg-main text-white"><i class="fa fa-globe"></i></span>
 										<div class="info-box-info">
-											<h4 class="info-box-title">Branding</h4>
+											<h4 class="info-box-title">Analytics Marketplace – Cogniticxs</h4>
 											<p class="info-box-text text-gray-2">
-												Lorem ipsum dolor sit amet, consectetur adipisicing elit minim veniam ut enim.
+												Cogniticx is a discovery platform for Analytics and Cognitive consulting services. It strives to get together on a common ground the two sides of the market - the Clients who are seeking Analytics services and the Service Providers who bring in cutting edge Analytics skills to address such requirements
 											</p>
 										</div>
 									</div>
@@ -646,8 +651,8 @@
 							* Use class "heading-uppercase" to enable uppercase letters.
 							-->
 							<div class="heading heading-md heading-uppercase heading-hover">
-								<span class="heading-title-ghost">Portfolio</span>
-								<h2 class="heading-title">Portfolio</h2>
+								<span class="heading-title-ghost">Offerings</span>
+								<h2 class="heading-title">offerings</h2>
 
 								<!-- Begin divider 
 								===================
@@ -667,8 +672,7 @@
 						<div class="col-md-6">
 
 							<p class="lead">
-								<strong>Lorem ipsum dolor</strong> sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. <a href="#">View All Portfolio..</a>
+								We offer a wide range of <strong>consultancy and specialist services</strong>. Have a quick look. <a href="#">Know More..</a>
 							</p>
 
 						</div> <!-- /.col -->
@@ -705,10 +709,10 @@
 							-->
 							<div class="isotope-filter-links collapse navbar-collapse max-width-1170 margin-auto text-uppercase" id="isotope-filter-collapse">
 								<a class="active no-radius" href="#" data-filter="*">All</a>
-								<a class="no-radius" href="#" data-filter=".photography">Photography</a>
-								<a class="no-radius" href="#" data-filter=".web-design">Web Design</a>
-								<a class="no-radius" href="#" data-filter=".graphics">Graphics</a>
-								<a class="no-radius" href="#" data-filter=".branding, .web-design">Mockups</a>
+								<a class="no-radius" href="#" data-filter=".photography">Data Sciences</a>
+								<a class="no-radius" href="#" data-filter=".web-design">Digital Consulting</a>
+								<a class="no-radius" href="#" data-filter=".graphics">Cogniticx</a>
+								<!-- <a class="no-radius" href="#" data-filter=".branding, .web-design">Mockups</a> -->
 							</div>
 							<!-- End isotope filter links -->
 
@@ -739,8 +743,8 @@
 											<span class="cover bg-transparent-9-main"></span>
 											<img class="item-img" src="assets/img/portfolio/v.2/portfolio-img-1.jpg" alt="image">
 											<div class="item-info text-white">
-												<h3 class="item-info-title">Hardcover Book</h3>
-												<p class="item-info-text">Photography</p>
+												<h3 class="item-info-title">Customer Analytics</h3>
+												<p class="item-info-text">Data Analytics</p>
 											</div>
 										</a>
 									</div>
@@ -749,7 +753,7 @@
 									<div id="portfolio-1" class="inline-popup mfp-hide">
 										<div class="inline-popup-inner">
 
-											<div class="inline-popup-image bg-image" style="background-image: url(assets/img/portfolio/v.2/big/portfolio-img-1.jpg); background-position: 50% 50%;"></div>
+											<!-- <div class="inline-popup-image bg-image" style="background-image: url(assets/img/portfolio/v.2/big/portfolio-img-1.jpg); background-position: 50% 50%;"></div> -->
 
 											<div class="row margin-top-40">
 												<div class="col-md-8 margin-bottom-20">
