--- a/index.html
+++ b/index.html
@@ -1332,107 +1332,10 @@
 			* Use class "bg-image-parallax" to enable background image parallax effect (otherwise use class "bg-image").
 			* Use class "bg-pattern" if you use background patterns (example: http://subtlepatterns.com/). Combine with class "bg-image-fixed".
 			-->
-			<section id="section-7" class="testimonials-section bg-dark bg-image-parallax" style="background-image: url(assets/img/misc/bg-2.jpg);">
-
-				<!-- Element cover
-				===================
-				* Use background transparent color classes for colored opacity (example: "bg-transparent-6-dark", "bg-transparent-8-5-red" ... 1 to 95). Look into "helper.css" file for more info.  
-				-->
-				<span class="cover bg-transparent-9-5-dark"></span>
-
-				<div class="container">
-					<div class="row wow fadeIn" data-wow-delay="0.3s">
-						<div class="col-md-12">
-
-							<!-- Begin testimonials
-							========================
-							* Use class "tm-hide-image" to hide testimonial image.
-							* Use class "tm-center" or "tm-right" to align testimonials.
-							-->
-							<div class="testimonial-wrap tm-center max-width-800 margin-auto">
-
-								<!-- Begin content carousel (http://www.owlcarousel.owlgraphic.com)
-								====================================================================
-								* Use class "nav-outside" for outside nav.
-								* Use class "nav-outside-top" for outside top nav.
-								* Use class "nav-rounded" for rounded nav.
-								* Use class "dots-outside" for outside dots.
-								* Use class "dots-left" or "dots-right" to align dots.
-								* Use class "dots-rounded" for rounded dots.
-								* Available carousel data attributes:
-										data-items="5".......................(items visible on desktop)
-										data-tablet-landscape="4"............(items visible on mobiles)
-										data-tablet-portrait="3".............(items visible on mobiles)
-										data-mobile-landscape="2"............(items visible on tablets)
-										data-mobile-portrait="1".............(items visible on tablets)
-										data-loop="true".....................(true/false)
-										data-margin="10".....................(space between items)
-										data-center="true"...................(true/false)
-										data-start-position="0"..............(item start position)
-										data-animate-in="fadeIn".............(more animations: http://daneden.github.io/animate.css/)
-										data-animate-out="fadeOut"...........(more animations: http://daneden.github.io/animate.css/)
-										data-mouse-drag="false"..............(true/false)
-										data-touch-drag="false"..............(true/false)
-										data-autoheight="true"...............(true/false)
-										data-autoplay="true".................(true/false)
-										data-autoplay-timeout="5000".........(milliseconds)
-										data-autoplay-hover-pause="true".....(true/false)
-										data-autoplay-speed="800"............(milliseconds)
-										data-drag-end-speed="800"............(milliseconds)
-										data-lazy-load="true"................(true/false)
-										data-nav="true"......................(true/false)
-										data-nav-speed="800".................(milliseconds)
-										data-dots="false"....................(true/false)
-										data-dots-speed="800"................(milliseconds)
-								-->
-								<div class="owl-carousel testimonial-carousel dots-outside text-white" data-items="1" data-loop="true">
-
-									<!-- Begin testimonial item -->
-									<div class="testimonial-item text-gray-2">
-										<img src="assets/img/testimonial/client-1.png" alt="image">
-										<blockquote>
-											<p>"Duis vel ligula non neque varius eleifend quis id elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse lacus dui, pellentesque ut porta et, consequat sit amet suscipit lacus."</p>
-											<small>Anna Clarkson</small>
-										</blockquote>
-									</div>
-									<!-- End testimonial item -->
-
-									<!-- Begin testimonial item -->
-									<div class="testimonial-item text-gray-2">
-										<img src="assets/img/testimonial/client-2.png" alt="image">
-										<blockquote>
-											<p>"Maecenas sit amet diam iaculis, lobortis tortor sed, bibendum quam. Nam mauris odio, sodales interdum facilisis in, dignissim et massa. In suscipit quam nisi."</p>
-											<small>John Smith</small>
-										</blockquote>
-									</div>
-									<!-- End testimonial item -->
-
-									<!-- Begin testimonial item -->
-									<div class="testimonial-item text-gray-2">
-										<img src="assets/img/testimonial/client-3.png" alt="image">
-										<blockquote>
-											<p>"Proin at tincidunt leo. Morbi ut metus sit amet purus molestie sollicitudin. Maecenas convallis est vitae neque feugiat, in accumsan odio vestibulum. Pellentesque sodales fermentum porttitor."</p>
-											<small>Jack Paterson</small>
-										</blockquote>
-									</div>
-									<!-- End testimonial item -->
-									
-								</div>
-								<!-- End testimonials carousel -->
-
-							</div>
-							<!-- End testimonials -->
-
-						</div> <!-- /.col -->
-					</div> <!-- /.row -->
-				</div> <!-- /.container -->
-
-			</section>
-			<!-- End section 7 -->
 
 
-			<section>
-				<div id="map" style="width:100%;height:400px">
+			<section class="bg-image" style="padding:0px">
+				<div class="container" id="map" style="width:100%;height:500px">
 
 				</div>
 			</section>
@@ -1482,25 +1385,11 @@
 								<!-- End divider -->
 
 								<p class="heading-tescription lead text-gray-2">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+									Have any query or suggestion? Fill out the form and we will be glad to hear from you. 
 								</p>
-							</div>
-							<!-- End heading -->
 
-						</div> <!-- /.col -->
 
-						<!-- Right column -->
-						<div class="col-md-5 text-gray-2 padding-left-40">
-
-							<div class="contact-info">
-								<p><i class="fa fa-home"></i> 121 King Street, Melbourne, Australia</p>
-								<p><i class="fa fa-phone"></i> phone: +123 456 789 00</p>
-								<p><i class="fa fa-envelope"></i> <a href="mailto:company.email@info.com" target="_blank">company.email@info.com</a></p>
-							</div>
-
-							<h5 class="margin-top-40 margin-bottom-20">Follow Us:</h5>
-
+							<h5 class="margin-top-40 margin-bottom-20">Follow Us:</h5>	
 							<!-- Begin social icons -->
 							<ul class="social-icons margin-bottom-20">
 								<li><a class="btn btn-social-min btn-white-bordered btn-lg" href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
@@ -1510,6 +1399,24 @@
 								<li><a class="btn btn-social-min btn-white-bordered btn-lg" href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
 							</ul>
 							<!-- End social icons -->
+
+							</div>
+							<!-- End heading -->
+
+						</div> <!-- /.col -->
+
+						<!-- Right column -->
+						<div class="col-md-5 text-gray-2 padding-left-40">
+
+							<div class="contact-info">
+								<p><i class="fa fa-home"></i> 35th and 36th Floor, UOB Plaza 1, 80 Raffles Place,Singapore, 048624</p>
+								<p><i class="fa fa-building"></i> Level 4, Vatika Atrium, DLF Golf Course Road, Gurgaon, 122011</p>
+								<p><i class="fa fa-building"></i>  Level 12, Tower C, Building 8, DLF Cyber City Complex, DLF City Phase II, Gurugram, Haryana 122002</p>
+								<p><i class="fa fa-phone"></i> phone: +123 456 789 00</p>
+								<p><i class="fa fa-envelope"></i> <a href="mailto:company.email@info.com" target="_blank">company.email@info.com</a></p>
+							</div>
+
+							
 
 						</div> <!-- /.col -->
 
@@ -1579,8 +1486,8 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="copyright small">
-								<a href="#">Asso - One Page HTML5 Template</a>
-								<p>Copyright 2016 / All rights reserved</p>
+								<a href="#">Astutrix Technologies Pvt. Ltd. </a>
+								<p>Copyright 2017 / All rights reserved</p>
 							</div>
 						</div> <!-- /.col -->
 					</div> <!-- /.row -->
