Removed Offering Section

--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
 			<!-- ==================================
 			///// Begin section 3 (portfolio) /////
 			=================================== -->
-			<section id="section-3" class="portfolio-section no-padding-bottom padding-top-100">
+			<section id="section-3" class="portfolio-section no-padding-bottom padding-top-100" style="display:none" class="hidden">
 
 				<div class="container">
 					<div class="row wow fadeIn">
@@ -740,11 +740,111 @@
 								<!-- Begin portfolio item -->
 								<div class="portfolio-item-wrap">
 									<div class="portfolio-item">
-										<a class="item-link inline-popup-trigger" href="#portfolio-1">
+										<a class="item-link inline-popup-trigger" ><!--  href="#portfolio-1" -->
 											<span class="cover bg-transparent-9-main"></span>
-											<img class="item-img" src="assets/img/portfolio/v.2/portfolio-img-1.jpg" alt="image">
+											<img class="item-img" src="assets/img/portfolio/v.2/portfolio-img-2.jpg" alt="image">
 											<div class="item-info text-white">
 												<h3 class="item-info-title">Customer Analytics</h3>
+												<p class="item-info-text">Data Analytics</p>
+											</div>
+										</a>
+									</div>
+
+									<!-- Begin inline popup content. Class "mfp-hide" is required to make dialog hidden -->
+									<div id="portfolio-1" class="inline-popup mfp-hide">
+										<div class="inline-popup-inner">
+
+											<!-- <div class="inline-popup-image bg-image" style="background-image: url(assets/img/portfolio/v.2/big/portfolio-img-1.jpg); background-position: 50% 50%;"></div> -->
+
+											<div class="row margin-top-40">
+												<div class="col-md-8 margin-bottom-20">
+													<h2 class="no-margin-top">Portfolio Single Item 1</h2>
+													<p>This is dummy copy. It is not meant to be read. It has been placed here solely to demonstrate the look and feel of finished, typeset text. Only for show.</p> 
+
+													<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquapta. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi aliquipter consequat adipisicing sedari.</p>
+												</div>
+												<div class="col-md-4 margin-bottom-20 padding-left-40">
+													<ul class="list-unstyled">
+														<li>Client: <strong><a href="#" target="_blank">MockCo INC</a></strong></li>
+														<li>Date: <strong><a href="#" target="_blank">01 jan, 2016</a></strong></li>
+														<li>Category <strong><a href="#" target="_blank">Photography</a></strong></li>
+														<li>Copyright ©2016, All Rights Reserved</li>
+													</ul>
+													<a href="#" target="_blank" class="btn btn-primary btn-lg margin-top-20">Launch Project</a>
+												</div>
+											</div> <!-- /.row -->
+
+										</div> <!-- /.inline-popup-inner -->
+
+										<a class="inline-popup-close" href="#"><i class="fa fa-times"></i></a>
+
+									</div>
+									<!-- End inline popup content -->
+
+								</div>
+								<!-- End portfolio item -->
+
+							</div>
+							<div class="isotope-item photography">
+								
+								<!-- Begin portfolio item -->
+								<div class="portfolio-item-wrap">
+									<div class="portfolio-item">
+										<a class="item-link inline-popup-trigger" ><!--  href="#portfolio-1" -->
+											<span class="cover bg-transparent-9-main"></span>
+											<img class="item-img" src="assets/img/portfolio/v.2/portfolio-img-2.jpg" alt="image">
+											<div class="item-info text-white">
+												<h3 class="item-info-title">Retail Analytics</h3>
+												<p class="item-info-text">Data Analytics</p>
+											</div>
+										</a>
+									</div>
+
+									<!-- Begin inline popup content. Class "mfp-hide" is required to make dialog hidden -->
+									<div id="portfolio-1" class="inline-popup mfp-hide">
+										<div class="inline-popup-inner">
+
+											<!-- <div class="inline-popup-image bg-image" style="background-image: url(assets/img/portfolio/v.2/big/portfolio-img-1.jpg); background-position: 50% 50%;"></div> -->
+
+											<div class="row margin-top-40">
+												<div class="col-md-8 margin-bottom-20">
+													<h2 class="no-margin-top">Portfolio Single Item 1</h2>
+													<p>This is dummy copy. It is not meant to be read. It has been placed here solely to demonstrate the look and feel of finished, typeset text. Only for show.</p> 
+
+													<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquapta. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi aliquipter consequat adipisicing sedari.</p>
+												</div>
+												<div class="col-md-4 margin-bottom-20 padding-left-40">
+													<ul class="list-unstyled">
+														<li>Client: <strong><a href="#" target="_blank">MockCo INC</a></strong></li>
+														<li>Date: <strong><a href="#" target="_blank">01 jan, 2016</a></strong></li>
+														<li>Category <strong><a href="#" target="_blank">Photography</a></strong></li>
+														<li>Copyright ©2016, All Rights Reserved</li>
+													</ul>
+													<a href="#" target="_blank" class="btn btn-primary btn-lg margin-top-20">Launch Project</a>
+												</div>
+											</div> <!-- /.row -->
+
+										</div> <!-- /.inline-popup-inner -->
+
+										<a class="inline-popup-close" href="#"><i class="fa fa-times"></i></a>
+
+									</div>
+									<!-- End inline popup content -->
+
+								</div>
+								<!-- End portfolio item -->
+
+							</div>
+							<div class="isotope-item photography">
+								
+								<!-- Begin portfolio item -->
+								<div class="portfolio-item-wrap">
+									<div class="portfolio-item">
+										<a class="item-link inline-popup-trigger" ><!--  href="#portfolio-1" -->
+											<span class="cover bg-transparent-9-main"></span>
+											<img class="item-img" src="assets/img/portfolio/v.2/portfolio-img-2.jpg" alt="image">
+											<div class="item-info text-white">
+												<h3 class="item-info-title">Social Media Analytics</h3>
 												<p class="item-info-text">Data Analytics</p>
 											</div>
 										</a>
@@ -790,17 +890,18 @@
 							<!-- //////////////////
 							// Begin isotope item
 							/////////////////////// -->
+
 							<div class="isotope-item branding">
 
 								<!-- Begin portfolio item -->
 								<div class="portfolio-item-wrap">
 									<div class="portfolio-item">
-										<a class="item-link inline-popup-trigger" href="#portfolio-2">
+										<a class="item-link inline-popup-trigger" > <!-- href="#portfolio-2" -->
 											<span class="cover bg-transparent-9-main"></span>
 											<img class="item-img" src="assets/img/portfolio/v.2/portfolio-img-2.jpg" alt="image">
 											<div class="item-info text-white">
-												<h3 class="item-info-title">Identity MockUp Vol.1</h3>
-												<p class="item-info-text">Branding</p>
+												<h3 class="item-info-title">Visualization and Reporting</h3>
+												<p class="item-info-text">Data Analytics</p>
 											</div>
 										</a>
 									</div>
@@ -850,12 +951,12 @@
 								<!-- Begin portfolio item -->
 								<div class="portfolio-item-wrap">
 									<div class="portfolio-item">
-										<a class="item-link inline-popup-trigger" href="#portfolio-3">
+										<a class="item-link inline-popup-trigger">
 											<span class="cover bg-transparent-9-main"></span>
 											<img class="item-img" src="assets/img/portfolio/v.2/portfolio-img-3.jpg" alt="image">
 											<div class="item-info text-white">
-												<h3 class="item-info-title">Brown Paper Bag</h3>
-												<p class="item-info-text">Web Design</p>
+												<h3 class="item-info-title">Marketing Analytics</h3>
+												<p class="item-info-text">Data Analytics</p>
 											</div>
 										</a>
 									</div>
