--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 					<div id="scrollspy" class="container header-container">
 
 						<!-- Begin logo  -->
-						<div class="logo font-alter-1">
-							<a href="index.html"><h1>Astutrix</h1></a>
+						<div class="logo font-alter-1 nav-logo">
+							<a href="index.html"><span><img class="img-responsive" src="assets/img/Astutrix.jpg" alt=""></span></a>
 						</div>
 						<!-- End logo -->
 
@@ -282,13 +282,13 @@
 
 					<!-- Begin intro caption -->
 					<div class="intro-caption vertical-align-center text-center text-white">
-						<h2 class="intro-title font-alter-1">
+						<h3 class="intro-title font-alter-1">
 							<span class="wow fadeInDown" data-wow-delay="0.4s" data-wow-duration="0.5s">As</span>
 							<span class="wow fadeInDown" data-wow-delay="0.6s" data-wow-duration="0.5s">tu</span>
 							<!-- <span class="wow bounceIn" data-wow-delay="1.6s">/</span> -->
 							<span class="wow fadeInDown" data-wow-delay="0.8s" data-wow-duration="0.5s">tr</span>
 							<span class="wow fadeInDown" data-wow-delay="1s" data-wow-duration="0.5s">ix</span>
-						</h2>
+						</h3>
 						<p class="intro-description wow fadeIn" data-wow-delay="2.2s">Data Science and Services</p>
 						<div class="margin-top-30">
 							<a href="#section-2" class="btn btn-white-bordered sm-scroll wow bounceIn" data-wow-delay="0.8s">Our Services</a> 
