--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
 						<!-- Begin logo  -->
 						<div class="logo font-alter-1 nav-logo">
-							<a href="index.html"><span><img class="img-responsive" src="assets/img/Astutrix.jpg" alt=""></span></a>
+							<a href="index.html"><span><img class="img-responsive" src="assets/img/Astutrix1.png" alt=""></span></a>
 						</div>
 						<!-- End logo -->
 
@@ -436,7 +436,7 @@
 							<div class="info-box info-box-1">
 								<span class="info-box-icon"><i class="fa fa-plus-square"></i></span>
 								<div class="info-box-info">
-									<h4 class="info-box-title">Expereinced</h4>
+									<h4 class="info-box-title">experienced</h4>
 									<p class="info-box-text">
 										<!-- Lorem ipsum dolor sit amet, consect adipis elit minim veniam ettis inkeras. -->
 									</p>
@@ -556,7 +556,7 @@
 									<div class="info-box info-box-4 info-box-white wow fadeIn" data-wow-delay="0.4s">
 										<span class="info-box-icon square-icon bg-main text-white"><i class="fa fa-globe"></i></span>
 										<div class="info-box-info">
-											<h4 class="info-box-title">Analytics Marketplace – Cogniticxs</h4>
+											<h4 class="info-box-title">Analytics Marketplace – Cogniticx</h4>
 											<p class="info-box-text text-gray-2">
 												Cogniticx is a discovery platform for Analytics and Cognitive consulting services. It strives to get together on a common ground the two sides of the market - the Clients who are seeking Analytics services and the Service Providers who bring in cutting edge Analytics skills to address such requirements
 											</p>
