Typo in About US Section

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 							<div class="info-box info-box-1">
 								<span class="info-box-icon"><i class="fa fa-plus-square"></i></span>
 								<div class="info-box-info">
-									<h4 class="info-box-title">experienced</h4>
+									<h4 class="info-box-title">Experienced</h4>
 									<p class="info-box-text">
 										<!-- Lorem ipsum dolor sit amet, consect adipis elit minim veniam ettis inkeras. -->
 									</p>
