Added IOSD Branding and made map fixed on scrolling

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
 					<!-- Made with love :) -->
 					<div class="made-with-love hidden-xs">
-						<p class="text-gray">Made with <span class="text-main"><i class="fa fa-heart-o"></i></span>by<em>IOSD</em></p>
+						<p class="text-gray">Made with <span class="text-main"><i class="fa fa-heart-o"></i></span> by <em> <a href="http://iosd.tech">IOSD</a> </em></p>
 					</div>
 
 					<!-- Scroll down arrow -->
