FIxed Broken Links

--- a/index.html
+++ b/index.html
@@ -346,9 +346,9 @@
 						<!-- Right column -->
 						<div class="col-md-4 text-center">
 
-							<a href="#" class="btn btn-primary-bordered btn-rounded-5x btn-xlg btn-block"><i class="fa fa-mobile"></i> Contact Us</a>
+							<a href="#section-8" class="btn btn-primary-bordered btn-rounded-5x btn-xlg btn-block"><i class="fa fa-mobile"></i> Contact Us</a>
 							<br>
-							<a href="#" class="small text-gray">Know More.. <i class="fa fa-caret-square-o-down"></i></a>
+							<a href="#section-1" class="small text-gray">Know More.. <i class="fa fa-caret-square-o-down"></i></a>
 							
 						</div> <!-- /.col -->
 
@@ -513,7 +513,7 @@
 
 								</p>
 								<br>
-								<a href="#" target="_blank" class="btn btn-white-bordered btn-rounded-5x"><i class="fa fa-external-link"></i> Read More!</a>
+								<a href="#section-8" class="btn btn-white-bordered btn-rounded-5x"><i class="fa fa-external-link"></i> Talk to Us!</a>
 							</div>
 							<!-- End heading -->
 
