Changed Email and Mob No. and Form now Working

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 								<hr class="hr-width-1 hr-double margin-top-15">
 								<ul class="list-unstyled small">
 									<li><i class="fa fa-home"></i> F-103, Kanchenjunga Towers, Sector 56, Gurgaon -122001</li>
-									<li><i class="fa fa-phone"></i> (+91) 9999885328</li>
-									<li><i class="fa fa-envelope-o"></i> <a href="mailto:marketing@astutrix.com">marketing@astutrix.com</a></li>
+									<li><i class="fa fa-phone"></i> (+91) 9810174700</li>
+									<li><i class="fa fa-envelope-o"></i> <a href="mailto:marketing@astutrix.com">info@astutrix.com</a></li>
 								</ul>
 							</div> <!-- /.col -->
 
@@ -1455,8 +1455,8 @@
 								<p><i class="fa fa-home"></i> 35th and 36th Floor, UOB Plaza 1, 80 Raffles Place,Singapore, 048624</p>
 								<p><i class="fa fa-building"></i> Level 4, Vatika Atrium, DLF Golf Course Road, Gurgaon, 122011</p>
 								<p><i class="fa fa-building"></i>  Level 12, Tower C, Building 8, DLF Cyber City Complex, DLF City Phase II, Gurugram, Haryana 122002</p>
-								<p><i class="fa fa-phone"></i> phone: +91 9999885328</p>
-								<p><i class="fa fa-envelope"></i> <a href="mailto:company.email@info.com" target="_blank">company.email@info.com</a></p>
+								<p><i class="fa fa-phone"></i> phone: +91 9810174700</p>
+								<p><i class="fa fa-envelope"></i> <a href="mailto:company.email@info.com" target="_blank">info@astutrix.com</a></p>
 							</div>
 
 							
@@ -1470,7 +1470,7 @@
 
 							<!-- Begin contact form 
 							========================= -->
-							<form id="contact-form" class="margin-top-80 text-white wow fadeIn" data-wow-delay="0.3s">
+							<form id="contact-form" class="margin-top-80 text-white wow fadeIn" data-wow-delay="0.3s" method="POST" action="https://formspree.io/info@astutrix.com">
 
 								<!-- Begin hidden required fields (https://github.com/agragregra/uniMail) -->
 								<input type="hidden" name="project_name" value="yourwebsiteaddress.com"> <!-- Change value to your site name -->
