Fixed Title Text and Logo

--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 
-<!--
-   Template:   Asso - One Page HTML5 Website Template
-   Author:     Themetorium
-   URL:        http://themetorium.net/
--->
-
 <html lang="en">
-	
-<!-- Mirrored from demo.themetorium.net/html/asso/v.1.2/theme/template-v2.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 27 Jun 2017 12:24:45 GMT -->
 <head>
 
 		<!-- Title -->
@@ -183,7 +175,7 @@
 
 						<!-- Begin logo  -->
 						<div class="logo font-alter-1 nav-logo">
-							<a href="index.html"><span><img class="img-responsive" src="assets/img/Astutrix1.png" alt=""></span></a>
+							<a href="index.html"><span><img src="assets/img/Astutrix1.png" alt=""></span></a>
 						</div>
 						<!-- End logo -->
 
@@ -1645,11 +1637,18 @@
 		<!--==============================================================================
 		///// End Stylesheet Switcher (for demo only). Remove if you do not need it. /////
 		============================================================================== -->
+		<style>
+			@media only screen and (max-width: 500px) {
+    			.nav-logo {
+    				width : 35%;
+    				padding-left : 5%;
+    				padding-top : 4%;
+    			}
+			}
+		</style>
 
 
 	</body>
 	<!-- End body -->
 
-
-<!-- Mirrored from demo.themetorium.net/html/asso/v.1.2/theme/template-v2.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 27 Jun 2017 12:27:18 GMT -->
 </html>
