color switcher deleted and colour changed

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 		<link rel="stylesheet" href="assets/css/helper.css">
 		<link rel="stylesheet" href="assets/css/theme.css">
 
-		<!-- Theme styles CSS (comment or uncomment below lines to enable/disable styles) -->
+		<!-- Theme styles CSS (comment or uncomment below lines to enable/disable styles) 
 		<link rel="alternate stylesheet" media="screen" title="blue-theme" href="assets/css/styles/blue.css">
 		<link rel="alternate stylesheet" media="screen" title="brown-theme" href="assets/css/styles/brown.css">
 		<link rel="alternate stylesheet" media="screen" title="green-theme" href="assets/css/styles/green.css">
 		<link rel="alternate stylesheet" media="screen" title="purple-theme" href="assets/css/styles/purple.css">
 		<link rel="alternate stylesheet" media="screen" title="yellow-theme" href="assets/css/styles/yellow.css">
 
-		<!-- Theme custom CSS (all your CSS customizations) -->
+		Theme custom CSS (all your CSS customizations) -->
 		<link rel="stylesheet" href="assets/css/custom.css">
 
 
@@ -94,61 +94,7 @@
 			=================================
 			* Add class "slidingbar-fixed" to enable fixed slidingbar.
 			-->
-			<section id="top-slidingbar-wrapper" class="slidingbar-fixed">
-				<div id="top-slidingbar">
-					<div class="container">
-						<div class="row">
-
-							<div class="col col-md-4">
-								<h4 class="top-slidingbar-heading text-gray-2">Information</h4>
-								<hr class="hr-width-1 hr-double margin-top-15">
-								<p class="small">We are a boutique consulting firm powered by Data Sciences and Digital Technology professionals with experience of having worked on some of the most challenging assignments across the globe.</p>
-							</div> <!-- /.col -->
-
-							<div class="col col-md-4">
-								<h4 class="top-slidingbar-heading text-gray-2">Contact</h4>
-								<hr class="hr-width-1 hr-double margin-top-15">
-								<ul class="list-unstyled small">
-									<li><i class="fa fa-home"></i> F-103, Kanchenjunga Towers, Sector 56, Gurgaon -122001</li>
-									<li><i class="fa fa-phone"></i> (+91) 9810174700</li>
-									<li><i class="fa fa-envelope-o"></i> <a href="mailto:marketing@astutrix.com">info@astutrix.com</a></li>
-								</ul>
-							</div> <!-- /.col -->
-
-							<div class="col col-md-4">
-
-								<h4 class="top-slidingbar-heading text-gray-2">Our Instagram</h4>
-								<hr class="hr-width-1 hr-double margin-top-15">
-
-								<!-- Begin thumbnail list 
-								==========================
-								* Use class "col-2", "col-3", "col-4" "col-5" or "col-6" for thumbnail list columns.
-								* Use class "gutter-1", "gutter-2", "gutter-3", "gutter-4" or "gutter-5" to add more space between items.
-								-->
-								<ul class="thumb-list col-5 gutter-3">
-									<li><a target="_blank" href="https://www.instagram.com/" class="thumb-list-item bg-image" style="background-image: url(assets/img/misc/small/img-1.jpg);"></a></li>
-									<li><a target="_blank" href="https://www.instagram.com/" class="thumb-list-item bg-image" style="background-image: url(assets/img/misc/small/img-2.jpg);"></a></li>
-									<li><a target="_blank" href="https://www.instagram.com/" class="thumb-list-item bg-image" style="background-image: url(assets/img/misc/small/img-3.jpg);"></a></li>
-									<li><a target="_blank" href="https://www.instagram.com/" class="thumb-list-item bg-image" style="background-image: url(assets/img/misc/small/img-4.jpg);"></a></li>
-									<li><a target="_blank" href="https://www.instagram.com/" class="thumb-list-item bg-image" style="background-image: url(assets/img/misc/small/img-5.jpg);"></a></li>
-									<li><a target="_blank" href="https://www.instagram.com/" class="thumb-list-item bg-image" style="background-image: url(assets/img/misc/small/img-6.jpg);"></a></li>
-									<li><a target="_blank" href="https://www.instagram.com/" class="thumb-list-item bg-image" style="background-image: url(assets/img/misc/small/img-7.jpg);"></a></li>
-									<li><a target="_blank" href="https://www.instagram.com/" class="thumb-list-item bg-image" style="background-image: url(assets/img/misc/small/img-8.jpg);"></a></li>
-									<li><a target="_blank" href="https://www.instagram.com/" class="thumb-list-item bg-image" style="background-image: url(assets/img/misc/small/img-9.jpg);"></a></li>
-									<li><a target="_blank" href="https://www.instagram.com/" class="thumb-list-item bg-image" style="background-image: url(assets/img/misc/small/img-11.jpg);"></a></li>
-								</ul>
-								<!-- End thumbnail list -->
-
-							</div> <!-- /.col -->
-
-						</div> <!-- /.row -->
-					</div> <!-- /.container -->
-				</div> <!-- /.top-slidingbar -->
-
-				<!-- top-top-slidingbar trigger -->
-				<div class="top-slidingbar-trigger-wrapper"><span class="top-slidingbar-trigger">+</span></div>
-
-			</section>
+			
 			<!-- End top sliding bar -->
 
 
@@ -375,7 +321,7 @@
 								* Use class "hr-1x", "hr-2x", "hr-3x", "hr-4x" or "hr-5x" to shange divider size.
 								* Use class "hr-dotted", "hr-dashed" or "hr-double" to shange divider style.
 								-->
-								<hr class="hr-width-1 hr-5x border-main">
+								<hr class="hr-width-1 hr-5x border-main" style="color:#00BED2;">
 								<!-- End divider -->
 
 								<p class="heading-tescription lead max-width-1000 margin-auto">Missionaries for helping our clients gain a sustainable 
@@ -466,7 +412,7 @@
 			* Use class "bg-image-parallax" to enable background image parallax effect (otherwise use class "bg-image").
 			* Use class "bg-pattern" if you use background patterns (example: http://subtlepatterns.com/). Combine with class "bg-image-fixed".
 			-->
-			<section id="section-2" class="services-section bg-dark bg-image-parallax" style="background-image: url(assets/img/misc/bg-5.jpg);">
+			<section id="section-2" class="services-section bg-dark bg-image-parallax" style="background-image: url(assets/img/misc/bg-5.png);">
 
 				<!-- Element cover
 				===================
@@ -497,7 +443,7 @@
 								* Use class "hr-1x", "hr-2x", "hr-3x", "hr-4x" or "hr-5x" to shange divider size.
 								* Use class "hr-dotted", "hr-dashed" or "hr-double" to shange divider style.
 								-->
-								<hr class="hr-width-1 hr-5x border-main">
+								<hr class="hr-width-1 hr-5x border-main" style="color:#00BED2;">
 								<!-- End divider -->
 
 								<p class="heading-tescription lead text-gray-2">We offer a range of Onsite and Online consultancy services which help clients improve their Data practices.  We do this by pairing technical with business expertise and focusing on fundamentals.
@@ -595,8 +541,8 @@
 								* Use class "hr-1x", "hr-2x", "hr-3x", "hr-4x" or "hr-5x" to shange divider size.
 								* Use class "hr-dotted", "hr-dashed" or "hr-double" to shange divider style.
 								-->
-								<hr class="hr-width-1 hr-5x border-main">
-								<!-- End divider -->
+								<hr class="hr-width-1 hr-5x border-main" style="color:#00BED2;>
+								<!-- End divider --> 
 
 							</div>
 							<!-- End heading -->
@@ -1303,7 +1249,7 @@
 							* Use class "hr-1x", "hr-2x", "hr-3x", "hr-4x" or "hr-5x" to shange divider size.
 							* Use class "hr-dotted", "hr-dashed" or "hr-double" to shange divider style.
 							-->
-							<hr class="hr-width-1 hr-5x border-main">
+							<hr class="hr-width-1 hr-5x border-main" style="color:#00BED2;>
 							<!-- End divider -->
 
 							<p class="lead call-to-action-text text-gray-2">
@@ -1416,7 +1362,7 @@
 								* Use class "hr-1x", "hr-2x", "hr-3x", "hr-4x" or "hr-5x" to shange divider size.
 								* Use class "hr-dotted", "hr-dashed" or "hr-double" to shange divider style.
 								-->
-								<hr class="hr-width-1 hr-5x border-main">
+								<hr class="hr-width-1 hr-5x border-main" style="color:#00BED2;>
 								<!-- End divider -->
 
 								<p class="heading-tescription lead text-gray-2">
@@ -1591,25 +1537,10 @@
 	   <!-- ================================================================================
 		///// Begin Stylesheet Switcher (for demo only). Remove if you do not need it. /////
 		================================================================================ -->
-		<div class="switcher-wrapper">
-			<div class="switcher">
-				<div class="color-box-list">
-					<ul>
-						<li><a class="switcher-color-box default" href="javascript:chooseStyle('none', 60)"></a></li>
-						<li><a class="switcher-color-box blue" href="javascript:chooseStyle('blue-theme', 60)"></a></li>
-						<li><a class="switcher-color-box brown" href="javascript:chooseStyle('brown-theme', 60)"></a></li>
-						<li><a class="switcher-color-box green" href="javascript:chooseStyle('green-theme', 60)"></a></li>
-						<li><a class="switcher-color-box purple" href="javascript:chooseStyle('purple-theme', 60)"></a></li>
-						<li><a class="switcher-color-box yellow" href="javascript:chooseStyle('yellow-theme', 60)"></a></li>
-					</ul>
-				</div>
-				<
-			</div>
-			<div class="switcher-btn pull-right"><i class="fa fa-cog fa-spin fa-fw"></i></div>
-		</div>
+		
 
 		<!-- Begin Stylesheet Switcher JS (for demo only). Remove if you do not need it.  -->
-		<script src="assets/vendor/styleswitch.js"></script>
+		
 		<!--/***********************************************
 		* Style Sheet Switcher v1.1- © Dynamic Drive DHTML code library (www.dynamicdrive.com)
 		* This notice MUST stay intact for legal use
