made it responsive

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 	   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	   <![endif]-->
 	   <style type="text/css">
+<style type="text/css">
 	.memeber_info_warper{
 		width: 400px;
 		overflow: hidden;
@@ -90,6 +91,7 @@
 		bottom: 0px;
 		text-shadow: 0px 0px 1px #fff;
 		font-weight: bold;
+		display: block;
 	}
 	.member_desc>p{margin : 0px; padding:10px; text-overflow: ellipsis; text-align: justify;}
 	.team_warper_child{position: absolute;}
@@ -111,9 +113,43 @@
 	#team_warper{
 		border-top: 35px solid #00d0ff;
     	width: 100%;
-    	height: 670px;
+    	height: 600px;
     	border-bottom: 35px solid #00D0FF;
 	}
+
+@media only screen and (max-width: 1000px){
+	.memeber_info_warper{
+		width: 400px;
+		overflow: hidden;
+		border: 1px solid blue;
+		border-radius: 2px;
+		background-color: whitesmoke;
+		text-align: center;
+		padding:10px;
+		padding-bottom: 0px;
+		margin-left: 10px;
+		margin-top: 50px;
+	}
+	.member_desc{
+		display: none;
+	}
+	#section-3{
+		height:1290px;
+	}
+	#back_img{
+		display: none;
+	}
+	.content_child{
+		background-color: rgba(0,0,0,0.8);
+		padding-bottom: 10px;
+		border-bottom: 35px solid #00D0FF;
+	}
+	#team_warper{
+		border-bottom: 0px ;
+	}
+}
+
+</style>
 </style>
 
 	</head>
@@ -911,37 +947,7 @@
 		***********************************************/-->
 		<!-- End Stylesheet Switcher JS -->
 
-		<script type="text/javascript">
-			$(function(){
-				$(".switcher-btn").on("click", function(e) {
-					e.preventDefault();
-					var div = $(".switcher-wrapper");
-					if (div.css("left") === "-160px") {
-					   $(".switcher-wrapper").animate({
-					      left: "0px"
-					   });
-					} else {
-					   $(".switcher-wrapper").animate({
-					      left: "-160px"
-					   });
-					}
-				});
-			});
-		</script>
-		<!--==============================================================================
-		///// End Stylesheet Switcher (for demo only). Remove if you do not need it. /////
-		============================================================================== -->
-		<style>
-			@media only screen and (max-width: 500px) {
-    			.nav-logo {
-    				width : 35%;
-    				padding-left : 5%;
-    				padding-top : 4%;
-    			}
-			}
-		</style>
-
-		<script type="text/javascript">
+	<script type="text/javascript">
 	const disp_height = getComputedStyle(document.getElementsByClassName('content_child')[0]).height,
 			act_height = getComputedStyle(document.getElementById('team_table')).height;
 	const scroll_height = 1297; // in this case it ius zero but this has to set to the value upto which the user has to scroll to reach to this section i.e. javascript command is window.scrollY
@@ -995,7 +1001,9 @@ His areas of special interest are General Management, New and Emerging Digital T
 `
 	}
 	];
-
+	var team_obj = {};
+	var no_of_info_disp = 3;
+	var text_to_be_put;
 	function make_the_team(){
 		var o = team_members;
 		var tr, td;
@@ -1004,7 +1012,7 @@ His areas of special interest are General Management, New and Emerging Digital T
 		for(let i=0; i<o.length; i++){
 			td = document.createElement('td');
 			td.innerHTML = `
-				<div class="memeber_info_warper member_`+i+`">
+				<div class="memeber_info_warper member_`+i+`" onclick = "open_team_mem_info(`+i+`)" >
 					<img src ="`+o[i].img+`" class="member_`+i+`_img memeber_img memeber_info_`+i+`" />
 					<div class="member_`+i+`_srt_info memeber_info memeber_info_`+i+`" style="width:100%; text-align:center">
 						<h1 class="member_`+i+`_img memeber_name memeber_info_`+i+`">`+o[i].name+`</h1>
@@ -1015,7 +1023,7 @@ His areas of special interest are General Management, New and Emerging Digital T
 					</div>
 				</div>
 				`;
-			if(!(i%3)){ // there should be only two member info in a row
+			if(!(i%no_of_info_disp)){ // there should be only two member info in a row
 				table.appendChild(tr);
 				tr = document.createElement('tr');
 				tr.appendChild(td);
@@ -1026,17 +1034,111 @@ His areas of special interest are General Management, New and Emerging Digital T
 
 		tr.appendChild(td); table.appendChild(tr);
 	}
-
 	window.onload = function(){
-		document.getElementsByClassName('content_child')[0].children[0].style.marginLeft = (window.innerWidth - 1310)/2 +'px';
-		make_the_team();
-		document.getElementsByClassName('content_child')[0].onscroll = ()=>{
-			var v = document.getElementsByClassName('content_child')[0].scrollTop;
-			document.getElementById('back_img').style.marginTop = - v/10;
-			//console.log(v);
+		if(innerWidth <= 1000){
+			no_of_info_disp = 1;
 		};
+		make_the_team();
+		if(innerWidth <= 1000){
+			document.getElementById('team_table').style.margin = 'auto';
+			for(let d = document.getElementsByClassName('memeber_info_warper'), i=0; i<d.length; i++){
+				d[i].style.width = 'auto';
+				d[i].children[2].style.display = 'none';
+			};
+			for(let d = document.getElementsByClassName('team_warper_child'), i=0; i<d.length;i++){
+				d[i].style.height = 'auto';
+				d[i].style.width = innerWidth+'px';
+			};
+			document.getElementById('team_warper').style.width = innerWidth+'px';
+			document.getElementById('team_warper').style.height = getComputedStyle(document.getElementsByClassName('content_child')[0].children[0]).height;
+			//document.getElementById('section-3').style.height = '1010px';
+		}
 	};
-	</script>
+
+	function open_team_mem_info(i){
+		var t = window.open();
+		var o = team_members;
+		t.document.write(`<div class="memeber_info_warper member_`+i+`" onclick = "open_team_mem_info(`+i+`)" >
+							<img src ="`+o[i].img+`" class="member_`+i+`_img memeber_img memeber_info_`+i+`" />
+							<div class="member_`+i+`_srt_info memeber_info memeber_info_`+i+`" style="width:100%; text-align:center">
+								<h1 class="member_`+i+`_img memeber_name memeber_info_`+i+`">`+o[i].name+`</h1>
+								<h3 class="member_`+i+`_img memeber_post memeber_info_`+i+`">`+o[i].post+`</h3>
+							</div>
+							<div class="member_`+i+`_desc memeber_desc member_desc memeber_info_`+i+`" style="width:100%;">
+								<p>`+o[i].desc+`</p>
+							</div>
+						</div>
+<style type="text/css">
+	.memeber_info_warper{
+		width: `+innerWidth+`px;
+		overflow: hidden;
+		border: 1px solid blue;
+		border-radius: 2px;
+		background-color: whitesmoke;
+		text-align: center;
+		padding:10px;
+		padding-bottom: 0px;
+		margin-left: 10px;
+		margin-top: 50px;
+	}
+	.member_img{
+		width: 400px;
+	}
+	.memeber_info{
+		font-family: 'lato',arial;
+	}
+	.memeber_name{
+		color: blue;margin: 0px;
+	}
+	.memeber_post{
+		color: grey;opacity: .5;
+	}
+	.member_desc{
+		font-family: 'lato',arial;
+		background: linear-gradient(to top,rgba(255,255,255,0), rgba(255,255,255,1), rgba(255,255,255,0));
+		position: relative;
+		bottom: 0px;
+		text-shadow: 0px 0px 1px #fff;
+		font-weight: bold;
+		display: block;
+	}
+	.member_desc>p{margin : 0px; padding:10px; text-overflow: ellipsis; text-align: justify;}
+	.team_warper_child{position: absolute;}
+	.content_child{
+		background-color: rgba(0,0,0,0.6);
+		height: 600px;
+		overflow-x: hidden;
+		width: 100%;
+	}
+	.back_img_warper{
+		width: 100%;
+		height: 600px;
+		overflow: hidden;
+	}
+	td{
+		vertical-align: top;
+	}
+
+	#team_warper{
+		border-top: 35px solid #00d0ff;
+    	width: 100%;
+    	height: 600px;
+    	border-bottom: 35px solid #00D0FF;
+	}
+
+/*@media only screen and (max-width: 500px){
+	.memeber_info_warper{
+		width: auto;
+	}
+	.member_desc{
+		display: none;
+	}
+}*/
+
+</style>
+						`)
+	}
+</script>
 	</body>
 	<!-- End body -->
 
