fixed popup looks

--- a/index.html
+++ b/index.html
@@ -1070,6 +1070,7 @@ His areas of special interest are General Management, New and Emerging Digital T
 						</div>
 <style type="text/css">
 	.memeber_info_warper{
+		margin:auto;
 		width: `+innerWidth+`px;
 		overflow: hidden;
 		border: 1px solid blue;
@@ -1078,8 +1079,6 @@ His areas of special interest are General Management, New and Emerging Digital T
 		text-align: center;
 		padding:10px;
 		padding-bottom: 0px;
-		margin-left: 10px;
-		margin-top: 50px;
 	}
 	.member_img{
 		width: 400px;
